Avoid flicker before the image is loaded

--- a/adminer/static/default.css
+++ b/adminer/static/default.css
@@ -43,6 +43,7 @@ input[type=image] { vertical-align: middle; }
 .options select { width: 20ex; width: auto\9; }
 .active { font-weight: bold; }
 .sqlarea { width: 98%; }
+.icon { width: 18px; height: 18px; }
 #menu { position: absolute; margin: 10px 0 0; padding: 0 0 30px 0; top: 2em; left: 0; width: 19em; overflow: auto; overflow-y: hidden; white-space: nowrap; }
 #menu p { padding: .8em 1em; margin: 0; border-bottom: 1px solid #ccc; }
 #content { margin: 2em 0 0 21em; padding: 10px 20px 20px 0; }
